rabbitmq-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-server-ingress
  namespace: rabbitmq-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: rabbitmq.riyenas.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-cluster
            port:
              number: 15672
  tls:
  - hosts:
    - rabbitmq.riyenas.dev
    secretName: letsencrypt-prod
